# 23202-AVDONINA-OOP-CPP

./: .gitignore  CMakeLists.txt  main.cpp
controller/: controller.cpp  controller.h
model/: model.cpp  model.h
src/: Parser.cpp  ParserTest.cpp  Printer.cpp  Statistic.h  config_parser.cpp  converters_factory.cpp  converters_factory.h  main.cpp  processor.cpp  processor.h  streams.h  utils.cpp  utils.h  wav.cpp  wav.h
src/converters/: mute_converter.cpp
task-0/: CMakeLists.txt  hgf.cpp
task-0/src/: FileReader.cpp  FileReader.h  FileReaderTest.cpp  Parser.h  ParserTest.cpp  Printer.h  PrinterTest.cpp  StatisticTest.cpp  main.cpp
task-1/: CMakeLists.txt
task-1/src/: BitArray.cpp  BitArray.h  main.cpp
task-1/tests/: BitArray_test.cpp
task-2/: CMakeLists.txt
task-2/controller/: controller.cpp  controller.h
task-2/fileparser/: fileparser.cpp  fileparser.h
task-2/googletest/googlemock/src/: gmock-all.cc  gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
task-2/googletest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers-arithmetic_test.cc  gmock-matchers-comparisons_test.cc  gmock-matchers-containers_test.cc  gmock-matchers-misc_test.cc  gmock-port_test.cc  (+15 more)
task-2/model/: model.cpp  model.h
task-2/view/: view.cpp  view.h
task-3/: config.txt
task-3/src/: config_parser.cpp  processor.cpp  processor.h  utils.cpp  wav.cpp
task-3/src/converters/: mute_converter.cpp
view/: view.cpp  view.h
(+85 files in other folders)
